kubernetes/istio-traffic-management/destination-rule-round-robin.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: destination-rule-hello
spec:
  host: hello
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
