kubernetes/istio-traffic-management/virtual-service-80-20.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-hello
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
  - route:
    - destination:
        host: hello
        subset: v1
      weight: 80
    - destination:
        host: hello
        subset: v2
      weight: 20
