kubernetes/istio-traffic-management/virtual-service-round-robin.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-hello
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
  - route:
    - destination:
        host: hello
