kubernetes/istio-traffic-management/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-hello
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
  - match:
    - uri:
        prefix: "/v2"
    route:
    - destination:
        host: hello
        subset: v2
  - match:
    - uri:
        prefix: "/v3"
    rewrite:
      uri: "/v2"
    route:
    - destination:
        host: hello
        subset: v2
  - route:
    - destination:
        host: hello
        subset: v1
